# Lakbay

./: .env.example  README.md  biome.json  next.config.ts  package.json  playwright.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/health/: route.ts
app/api/stats/: route.ts
app/api/trips/: route.ts
app/stats/: page.tsx
app/trips/: page.tsx
app/trips/[id]/: page.tsx
contracts/: .gitignore  Cargo.toml  DEPLOYMENT.md  Makefile
contracts/scripts/: deploy.sh
contracts/travel-fund/: Cargo.toml
contracts/travel-fund/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/travel-fund/test_snapshots/test/: contribute_locks_funds_and_tracks_totals.1.json  contribute_to_settled_trip_fails.1.json  contribute_to_unknown_trip_fails.1.json  contribute_zero_amount_fails.1.json  double_initialize_fails.1.json  initialize_records_admin_and_token.1.json  multiple_contributions_accumulate_distinct_members.1.json  open_duplicate_trip_fails.1.json  open_trip_records_organizer.1.json  refund_over_member_contribution_fails.1.json  refund_returns_remainder_and_appends_ledger.1.json  settle_blocks_new_contributions_but_allows_spend.1.json  spend_by_non_organizer_fails.1.json  spend_over_balance_fails.1.json  spend_pays_payee_and_appends_ledger.1.json  trips_are_isolated.1.json
src/server/config/: env.public.ts  env.ts
src/server/lib/: session.ts
src/server/service/: ledger.service.ts  stats.service.ts  trip.service.ts
src/ui/lib/: api.ts  (+1 more)
tests/: setup.ts
tests/e2e/: prod-real.spec.ts
tests/unit/: amounts.test.ts  format.test.ts
(+30 files in other folders)
